duicontrolpanel (0.8.5~unreleased) unstable; urgency=low

  * Fixes: height of contentitems are non constant
  * Fixes: NB#178814 -  Icon is not shown in the applet's brief
  * Fixes: NB#173756 - The order of the items in recently used list is
    not same after the device reboot
  * Fixes: NB#180202 - Default value for DcpBrief is deprecated

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 15 Jul 2010 10:43:03 +0200

duicontrolpanel (0.8.4) unstable; urgency=low

  * Some margin fixes
  * Fixes: NB#170026 - Emitting valuesChanged signal doesn't update
    valueText displayed in Brief (removes the workaround, because bug got fixed)
  * Fixes: NB#176941 -  duicontrolpanel crash blocks systemui-applets-ui-tests

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 28 Jun 2010 13:33:01 +0200

duicontrolpanel (0.8.3) unstable; urgency=low

  [ Laszlo Gal]
  * Added api file to debian directory

  [ Robert Manner ]
  * Fixed compilation warnings

 -- Laszlo Gal <laszlo.gal@blumsoft.eu>  Mon, 21 Jun 2010 12:10:33 +0200

duicontrolpanel (0.8.2) unstable; urgency=low

  * new version

 -- Laszlo Gal <laszlo.gal@blumsoft.eu>  Mon, 20 Jun 2010 10:32:00 +0200

duicontrolpanel (0.8.2~unreleased) unstable; urgency=low

  * new version

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 10 Jun 2010 18:50:33 +0200

duicontrolpanel (0.8.1) unstable; urgency=low

  [ Sandor Pinter ]
  * Enable booster usage, and remove the forking for this

  [ Robert Manner ]
  * Fixes: NB#172559 - Time and Language UI display some hard coded
    button (Display language and Keyboard languages)

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 10 Jun 2010 18:01:22 +0200

duicontrolpanel (0.8.0) unstable; urgency=low

  [ Sandor Pinter ]
  * Fixing Coverity issues

  [ Robert Manner ]
  * Fixes: NB#171520 - The View Menu should not be available on Region
    format setting view
  * Adds API for accessing the progress indicator of the page from
    DcpWidget