@@ -4,7 +4,7 @@ Name=Skeleton
 Icon=
 Exec=
 X-logical-id=qtn_sett_main_display
-X-translation-catalog=duicontrolpanel-skeletonapplet
+X-translation-catalog=skeletonapplet1,skeletonapplet2
 
 [DUI]
 X-DUIApplet-Applet=libdcpskeletonapplet.so
